fix translations & add dispensary static page view

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -35,23 +35,24 @@ pl:
     email_us: "Napisz do nas"
     e-mail: "federacja@cannabishouse.eu"
     home: "Strona główna"
-    dispensaries: "Dyspensaria"
-    disp: "Dyspensarium"
-    disp_ldz: "Łódź"
-    disp_wwa: "Warszawa"
     grl: "Grass Roots Lobbing"
     thc: "THC - Trade Hemp Center"
     ch_stow: "Stowarzyszenie Cannabis House"
     partners: "Partnerzy"
     license: "Licencja/Oferta"
-    dispensary-mission: "Misja"
-    dispensary-how-to-open: "Jak otworzyć"
-    dispensary-license: "Licencja"
-    grow: "Uprawa"
-    grow-mission: "Misja"
-    grow-how-to-open: "Jak otworzyć"
-    grow-license: "Licencja"
-
+    dispensary:
+      ldz: "Łódź"
+      wwa: "Warszawa"
+      dispensaries: "Dyspensaria"
+      mission: "Misja"
+      how-to-open: "Jak otworzyć"
+      license: "Licencja"
+      dispensary: "Dyspensarium"
+    growing:
+      indoor: "Uprawa"
+      mission: "Misja"
+      how-to-open: "Jak otworzyć"
+      license: "Licencja"
     contact: "Kontakt"
     office: "CENTRALA"
     phone_nr: "+48*73*32*32100"
