--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -46,8 +46,8 @@ de:
       mission: "Mission"
       vision: "Vorstellung"
     contact: "Verbindung"
-    office: "CannaHub"
-    phone_nr: "+48 110 101 011"
+    office: "biuro@cannahub.eu"
+    phone_nr: "+48 22 100 22 31"
 
   footer:
     up_to_date: "Bleiben Sie regelmäßig bei uns:"
