changing forum page

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -126,12 +126,13 @@ pl:
     title: "I Forum Biznesowe nr Inwestycje w konopie"
     h1p1: "I POLSKIE FORUM BIZNESOWE"
     h1p2: "NT KONOPI"
-    sub: "W związku z dynamicznym rozwojem rynku konopnego, pragniemy tuż przed rozpoczęciem kampanii otwierającej sieć punktów handlowo-usługowych, umożliwić zakup licencji oraz wejście w inwestycje w cannabis w trybie przedpremierowym."
-    p1: "Od 1 listopada 2017r. przepisy prawa regulują rejestrację, wytwarzanie i wprowadzanie do obrotu w Polsce preparatów medycznych na bazie konopi oraz stosowanie zarejestrowanych preparatów w lecznictwie."
+    sub: "Jako grupa podmitów współpracująca z jednostkami naukowymi oraz instytucjami państowymi w związku z dynamicznym rozwojem rynku konopnego, pragniemy tuż przed rozpoczęciem kampanii otwierającej sieć punktów handlowo-usługowych, umożliwić zakup licencji oraz wejście w inwestycje w cannabis w trybie przedpremierowym."
+    p1: "Nad  wszystkimi projektami czuwa grono ekspertów oraz prawników, którzy od wielu lat z powodzeniem forsują drogę dla konopi w polskim prawie, aby tworzyć nowe kierunki dla ambitnych przedsiębiorców. Od 1 listopada 2017r. przepisy prawa regulują rejestrację, wytwarzanie i wprowadzanie do obrotu w Polsce preparatów medycznych na bazie konopi oraz stosowanie zarejestrowanych preparatów w lecznictwie."
     h3: "WSZYSTKO TO - ZGODNIE Z POLSKIM I EUROPEJSKIM PRAWEM."
     when: "1 września w Warszawie odbędzie się I ogólnopolskie forum biznesowe dot. konopi"
     invites: "Spotkanie ma charakter zamknięty, wstęp tylko dla osób zainteresowanych po wrześniejszej rezerwacji miejsca."
     contact: "Zachęcamy do kontaktu mail: " 
     details: "Szczegółowe informacje przesyłamy w wiadomości osobom zainteresowanym. Możliwa wyłączność na danym terenie."
     horizon:   "Projekt o którym mowa powyżej jest projektem długofalowym, minimum 10 lat."
+    offer: "W naszej ofercie mamy warianty upraw konopi przemysłowych na potrzeby przemysłu przetwórczego jak i przemysłu farmaceutycznego oraz uprawy i dystrybucji na specjalnych warunkach, dopuszczonych przez prawo konopi indyjskich na potrzeby prowadzonych badań naukowych oraz w niedalekiej przyszłości również i przemysłu farmaceutycznego dlatego każdy zainteresowany powinnien znaleść coś dla siebie."
     faq: "Wszelkie zapytania lub chęć uzyskania więcej informacji prosimy kierować na maila podanego do ogłoszenia."
