update forum info

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -123,16 +123,18 @@ en:
     krs: "KRS:"    
 
   forum: 
-    title: "I Polskie Konopne Forum Gospodarcze"
-    h1p1: "I Polskie Konopne"
-    h1p2: "Forum Gospodarcze"
-    sub: "Grupa podmiotów prawnych współpracująca z jednostkami naukowymi i organizacjami pozarządowymi - w związku z dynamicznym rozwojem rynku konopnego - pragnie zaprosić na zamknięte forum biznesowe, które się odbędzie się 1 września w Warszawie. Forum skierowane jest do insytucji otoczenia biznesu B2B."
-    h3: "WSZYSTKO TO - ZGODNIE Z POLSKIM I EUROPEJSKIM PRAWEM."
-    when: "1 września w Warszawie odbędzie się I ogólnopolskie forum biznesowe dot. konopi"
-    invites: "Spotkanie ma charakter zamknięty, wstęp tylko dla osób zainteresowanych po wrześniejszej rezerwacji miejsca."
-    contact: "Zachęcamy do kontaktu mail: "
-    contact2: "Forum odbędzie się w godzinach w godzinach od 12 do 17. Wstęp możliwy po wcześniejszej weryfikacji - zgłoszenia uczestnictwa mailowo lub telefonicznie 733232100." 
-    details: "Szczegółowe informacje przesyłamy w wiadomości osobom zainteresowanym. Możliwa wyłączność na danym terenie."
-    horizon:   "Projekt o którym mowa powyżej jest projektem długofalowym, minimum 10 lat."
-    offer: "W naszej ofercie mamy warianty upraw konopi przemysłowych na potrzeby przemysłu przetwórczego jak i przemysłu farmaceutycznego oraz uprawy i dystrybucji na specjalnych warunkach, dopuszczonych przez prawo konopi indyjskich na potrzeby prowadzonych badań naukowych oraz w niedalekiej przyszłości również i przemysłu farmaceutycznego dlatego każdy zainteresowany powinnien znaleść coś dla siebie."
-    faq: "Wszelkie zapytania lub chęć uzyskania więcej informacji prosimy kierować na maila podanego do ogłoszenia."
+    title: "I Polish HEMP Buisness Forum"
+    h1p1: "I Polish HEMP"
+    h1p2: "Buisness Forum"
+    sub: "A group of legal entities cooperating with scientific units and non-governmental organizations - in connection with the dynamic development of the cannabis market - undertook the organization of a closed business forum, which took place on September 1 in Warsaw. The forum was aimed at the business environment of B2B business."
+    h3: "Everythin is in accordance with Polish and European law."
+    when: "Thanks to the kindness of CannaHub Sp. z o.o. in Warsaw on 1 September, the 1st National Economic Forum was held, which "
+    invites: "was directed directly to entrepreneurs interested in investing in the emerging and dynamically developing cannabis market."
+    contact: "The theme of the meeting was - Cannabis House Dispensary as an information center on cannabis and the place of raw material distribution as part of scientific research."
+    contact2: "Together with investors, we decided to establish a Federation of Cannabis Distributors. At the meeting, a detailed manner of launching the Cannabis House Dyspensary was presented, and products that can be purchased in such a place." 
+    details: "We have enriched the meeting with some information for people from the Cannabis Producers Federation."
+    details2:   "Manufacturers have the green light to grow hemp with high CBD content, in line with existing plant breeding technologies. Raw material obtained in this way will help diversify the portfolio of suppliers. Our partner from Switzerland has the necessary genetics and offers help (seeds, clones, technology) in launching the first crops and genetic stabilization in Poland." 
+    horizon:   "The project referred to above is a long-term project, minimum 10 years."
+    offer: "Our offer includes variants of industrial hemp cultivation for the needs of the processing industry and the pharmaceutical industry as well as cultivation and distribution under special conditions, allowed by cannabis law for the needs of scientific research and in the near future also of the pharmaceutical industry, that is why everybody should find something for themselves."
+    faq: "For detailed information please contact 0048 733 232 100 or by e-mail"
+
