--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -126,13 +126,15 @@ pl:
     title: "I Polskie Konopne Forum Gospodarcze"
     h1p1: "I Polskie Konopne"
     h1p2: "Forum Gospodarcze"
-    sub: "Grupa podmiotów prawnych współpracująca z jednostkami naukowymi i organizacjami pozarządowymi - w związku z dynamicznym rozwojem rynku konopnego - pragnie zaprosić na zamknięte forum biznesowe, które się odbędzie się 1 września w Warszawie. Forum skierowane jest do insytucji otoczenia biznesu B2B."
+    sub: "Grupa podmiotów prawnych współpracująca z jednostkami naukowymi i organizacjami pozarządowymi - w związku z dynamicznym rozwojem rynku konopnego - podjęła się organizacji zamkniętego forum biznesowe, które odbyło się 1 września w Warszawie. Forum skierowane było do insytucji otoczenia biznesu B2B."
     h3: "WSZYSTKO TO - ZGODNIE Z POLSKIM I EUROPEJSKIM PRAWEM."
-    when: "1 września w Warszawie odbędzie się I ogólnopolskie forum biznesowe dot. konopi"
-    invites: "Spotkanie ma charakter zamknięty, wstęp tylko dla osób zainteresowanych po wrześniejszej rezerwacji miejsca."
-    contact: "Zachęcamy do kontaktu mail: "
-    contact2: "Forum odbędzie się w godzinach w godzinach od 12 do 17. Wstęp możliwy po wcześniejszej weryfikacji - zgłoszenia uczestnictwa mailowo lub telefonicznie 733232100." 
-    details: "Szczegółowe informacje przesyłamy w wiadomości osobom zainteresowanym. Możliwa wyłączność na danym terenie."
+    when: "Dzięki uprzejmości CannaHub Sp. z o.o. w Warszawie w dniu 1 września odbyło się I Ogólnopolskie Forum Gospodarcze, które"
+    invites: " skierowane było bezpośrednio do przedsiębiorców zainteresowanych inwestycjami na wschodzącym i dynamicznie rozwijającym się rynku konopnym. "
+    contact: "Tematem przewodnim spotkania było - Dyspensarium Cannabis House jako centrum informacji nt. konopi oraz miejsce wydawania surowca w ramach badań naukowych."
+    contact2: "Wspólnie z inwestorami podjęliśmy decyzję o zawiązaniu Federacji Dystrybutorów Cannabis. Na spotkaniu prezentowany był szczegółowy sposób uruchomienia placówki Dyspensarium, oraz produkty które będzie można w takim Dyspensarium nabyć." 
+    details: "Wzbogaciliśmy spotkanie o kilka informacji dla osób z Federacji Producentów Cannabis."
+    details2:   "Panowie producenci mają zielone światło na uprawianie konopi włóknistych o wysokiej zawartości CBD, zgodnie z istniejącymi technologiami hodowli roślin. Surowiec pozyskany w ten sposób pomoże zdywersyfikować portfel dostawców. Nasz partner ze Szwajcarii dysponuje niezbędną genetyką oraz oferuje pomoc (nasiona, klony, technologię) w uruchamianiu pierwszych upraw i stabilizacji genetycznej w pl." 
     horizon:   "Projekt o którym mowa powyżej jest projektem długofalowym, minimum 10 lat."
     offer: "W naszej ofercie mamy warianty upraw konopi przemysłowych na potrzeby przemysłu przetwórczego jak i przemysłu farmaceutycznego oraz uprawy i dystrybucji na specjalnych warunkach, dopuszczonych przez prawo konopi indyjskich na potrzeby prowadzonych badań naukowych oraz w niedalekiej przyszłości również i przemysłu farmaceutycznego dlatego każdy zainteresowany powinnien znaleść coś dla siebie."
-    faq: "Wszelkie zapytania lub chęć uzyskania więcej informacji prosimy kierować na maila podanego do ogłoszenia."
+    faq: "po szczegółowe informację zapraszamy do kontaktu 0048 733 232 100 lub mailowo "
+
