changed mail and mobile nr in locales

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,13 +47,13 @@ en:
     contact: "Contact"
     forum: "Forum"
 
-  office_nr: "+48 22 100 22 31 "
+  office_nr: "+48 733 500 007 "
   phone_nr: "+48 501 100 901"
-  e-mail: "biuro@cannahub.eu"
+  e-mail: "office@cannahub.eu"
   
   footer:
     up_to_date: "Stay up to date"
-    e-mail: "biuro@cannahub.eu"
+    e-mail: "office@cannahub.eu"
     copywright: "Copyright © 2017-2018"
     reserved: "All rights Reserved."
 
