--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -47,7 +47,7 @@ pl:
     contact: "Kontakt"
     forum: "Forum"
 
-  office_nr: "+48 22 100 22 31 "
+  office_nr: "+48 733 500 007 "
   phone_nr: "+48 501 100 901"
   e-mail: "biuro@cannahub.eu"
 
