--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,8 +48,12 @@ en:
     forum: "Forum"
 
   office_nr: "+48 733 500 007 "
+  office_nr_en: "+48 515-163-257"
+  office_nr_pl: "+48 530-310-330"
   phone_nr: "+48 501 100 901"
-  e-mail: "office@cannahub.eu"
+  e-mail: "biuro@cannahub.eu"
+  mail_en: "office@cannahub.eu"
+  mail_pl: "biuro@cannahub.eu"
   
   footer:
     up_to_date: "Stay up to date"
