--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,8 @@ en:
     ch_stow: "Stowarzyszenie Cannabis House"
     partners: "Partners"
     offer: "Offer"
+    login: "Log in"
+    logout: "Log out"
     hub:
       hub: "Canna HUB"
       mission: "Mission"
