--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,7 +51,7 @@ en:
   office_nr_en: "+48 733 500 007"
   office_nr_pl: "+48 501 100 901"
   phone_nr: "+48 501 100 901"
-  e-mail: "biuro@cannahub.eu"
+  e-mail: "office@cannahub.eu"
   mail_en: "office@cannahub.eu"
   mail_pl: "biuro@cannahub.eu"
   
