added wallet codes
- added wallet codes
- removed routes wallet

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,7 +40,7 @@ en:
     ch_stow: "Stowarzyszenie Cannabis House"
     partners: "Partners"
     offer: "Offer"
-    login: "Log in"
+    login: "Blockchain"
     logout: "Log out"
     hub:
       hub: "Canna HUB"
